--- a/style.scss
+++ b/style.scss
@@ -16,15 +16,15 @@
   --sec-col: #6d8a96;
   --util-col: #2d3142;
   --link-col: #003554;
-  --hl-col: #ff7f11;
+  --hl-col: #e4c06d;
 
   a {
-    color: black;
+    color: inherit;
     text-decoration: none;
   }
 
   p {
-    line-height: 2;
+    line-height: 1.5;
     font-family: "Merriweather";
   }
 }
@@ -54,36 +54,4 @@ body {
   .container {
     width: 85%;
   }
-}
-// header
-header {
-  padding: 3rem;
-  min-height: 12vh;
-  background: url(img/header.jpg) no-repeat center;
-  justify-content: space-between;
-  div {
-    i {
-      font-size: 3.25rem;
-      margin: 12px;
-    }
-    h1,
-    p,
-    i {
-      color: var(--pri-col);
-    }
-  }
-
-  nav {
-    ul {
-      li {
-        color: #f0f7ee;
-        margin: 0px 0.5rem;
-      }
-    }
-  }
-}
-
-// Mobile
-
-@media screen and (max-width: 960px) {
 }
