--- a/style.css
+++ b/style.css
@@ -28,6 +28,13 @@
   line-height: 1.5;
   font-family: "Merriweather";
 }
+* p,
+* h2,
+* h3,
+* h4,
+* li {
+  color: var(--util-col);
+}
 
 body .flex {
   display: flex;
@@ -49,7 +56,7 @@ body .container {
   margin: 0 auto;
 }
 body .glassbg {
-  background-color: rgba(109, 138, 150, 0.25);
+  background-color: rgba(109, 138, 150, 0.15);
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
   filter: drop-shadow(2px 2px 2px black);
@@ -112,7 +119,20 @@ header div i {
   background: url(img/header.jpg) no-repeat center/cover;
 }
 #bhome section.strip {
-  background-color: var(--sec-col);
+  padding: 10px;
+  background-color: rgba(254, 203, 84, 0.75);
+}
+#bhome section.strip h2 {
+  text-align: center;
+  padding: 20px 0px 0px;
+  font-size: 2rem;
+}
+#bhome section.strip figure {
+  padding: 2rem;
+}
+#bhome section.strip figure i {
+  color: var(--util-col);
+  font-size: 3.5rem;
 }
 
 @media screen and (max-width: 600px) {
@@ -125,6 +145,12 @@ header div i {
   nav div.container i {
     color: var(--hl-col);
     font-size: 1.75rem;
+  }
+  section.strip div.container {
+    flex-direction: column;
+  }
+  section.strip div.container figure i {
+    margin-right: 1.75rem;
   }
 }
 @media screen and (min-width: 601px) {
@@ -142,5 +168,11 @@ header div i {
   }
   nav div.container i {
     display: none;
+  }
+  section.strip figure {
+    flex-direction: column;
+  }
+  section.strip figure i {
+    margin-bottom: 40px;
   }
 }/*# sourceMappingURL=style.css.map */
