--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   margin: 0;
   font-family: var(--font-primary);
+  scroll-behavior: smooth;
   --font-barlow: "Barlow Condensed", sans-serif;
   --font-golos: "Golos Text", sans-serif;
   --font-josefin: "Josefin Sans", sans-serif;
@@ -115,12 +116,21 @@ header div i {
   color: var(--hl-col);
 }
 
+div.backtotopbutton {
+  position: fixed;
+  bottom: 3rem;
+  right: 2rem;
+}
+div.backtotopbutton i {
+  font-size: 2rem;
+}
+
 #bhome header {
   background: url(img/header.jpg) no-repeat center/cover;
 }
 #bhome section.strip {
   padding: 10px;
-  background-color: rgba(254, 203, 84, 0.75);
+  background-color: rgba(254, 203, 84, 0.5);
 }
 #bhome section.strip h2 {
   text-align: center;
