--- a/style.scss
+++ b/style.scss
@@ -156,7 +156,7 @@ div.backtotopbutton {
 
   section.strip {
     padding: 10px;
-    background-color: rgba($color: #fecb54, $alpha: 0.5);
+    background-color: rgba($color: #fecb54, $alpha: 0.85);
     h2 {
       text-align: center;
       padding: 20px 0px 0px;
@@ -166,7 +166,15 @@ div.backtotopbutton {
       padding: 2rem;
       i {
         color: var(--util-col);
-        font-size: 3.5rem;
+        font-size: 4rem;
+      }
+      figcaption {
+        h3 {
+          font-style: italic;
+        }
+        p {
+          font-size: 1rem;
+        }
       }
     }
   }
