--- a/style.scss
+++ b/style.scss
@@ -187,21 +187,24 @@ div.backtotopbutton {
 
   main {
     section.featured {
-      padding: 20px;
+      padding: 20px 0px;
       h2 {
         font-size: 2rem;
         font-family: var(--font-golos);
         text-align: center;
       }
       figure {
-        margin: 20px 0px;
+        width: 100%;
+        padding: 20px 0px;
+        img {
+          object-fit: cover;
+        }
         figcaption {
           background-color: var(--pri-col);
           padding: 30px;
           div {
             justify-content: space-between;
             h3 {
-              font-size: 0.85rem;
               font-family: var(--font-manrope);
             }
           }
@@ -247,7 +250,13 @@ div.backtotopbutton {
         img {
           height: 300px;
           width: 100%;
-          object-fit: cover;
+        }
+        figcaption {
+          div {
+            h3 {
+              font-size: 0.85rem;
+            }
+          }
         }
       }
     }
@@ -286,11 +295,20 @@ div.backtotopbutton {
   }
 
   section.featured {
-    width: 100%;
     figure {
+      width: 100%;
       flex-direction: row;
       img {
+        height: 300px;
         width: 50%;
+      }
+      figcaption {
+        width: 50%;
+        div {
+          h3 {
+            font-size: 1.25rem;
+          }
+        }
       }
     }
   }
