--- a/style.scss
+++ b/style.scss
@@ -142,7 +142,7 @@ header {
 
 div.backtotopbutton {
   position: fixed;
-  bottom: 3rem;
+  bottom: 2rem;
   right: 1rem;
   i {
     font-size: 2rem;
@@ -182,6 +182,13 @@ div.backtotopbutton {
           font-size: 1rem;
         }
       }
+      div.details {
+        ul {
+          li {
+            font-family: var(--font-manrope);
+          }
+        }
+      }
     }
   }
 
@@ -193,20 +200,42 @@ div.backtotopbutton {
         font-family: var(--font-golos);
         text-align: center;
       }
-      figure {
+      div.details {
+        margin-top: 20px;
+        height: 400px;
         width: 100%;
-        padding: 20px 0px;
+        position: relative;
+        isolation: isolate;
+
         img {
+          z-index: -10;
+          position: absolute;
+          height: 100%;
+          width: 100%;
           object-fit: cover;
         }
-        figcaption {
-          background-color: var(--pri-col);
-          padding: 30px;
-          div {
-            justify-content: space-between;
-            h3 {
-              font-family: var(--font-manrope);
-            }
+
+        ul {
+          height: 20%;
+          width: 100%;
+          padding: 120px 40px 0px;
+          background: rgb(0, 0, 0);
+          background: linear-gradient(
+            0deg,
+            rgba(0, 0, 0, 1) 30%,
+            rgba(254, 255, 178, 0) 100%
+          );
+          z-index: 3;
+          align-self: flex-end;
+
+          h3,
+          li {
+            font-family: var(--font-golos);
+            color: #f0f7ee;
+          }
+
+          h3 {
+            font-size: 2rem;
           }
         }
       }
@@ -245,18 +274,8 @@ div.backtotopbutton {
 
   main {
     section.featured {
-      figure {
-        flex-direction: column;
-        img {
-          height: 300px;
-          width: 100%;
-        }
-        figcaption {
-          div {
-            h3 {
-              font-size: 0.85rem;
-            }
-          }
+      div.details {
+        ul {
         }
       }
     }
@@ -294,20 +313,13 @@ div.backtotopbutton {
     }
   }
 
-  section.featured {
-    figure {
-      width: 100%;
-      flex-direction: row;
-      img {
-        height: 300px;
-        width: 50%;
-      }
-      figcaption {
-        width: 50%;
-        div {
-          h3 {
-            font-size: 1.25rem;
-          }
+  main {
+    section.featured {
+      div.details {
+        img {
+          object-position: center;
+        }
+        ul {
         }
       }
     }
