--- a/style.scss
+++ b/style.scss
@@ -200,42 +200,44 @@ div.backtotopbutton {
         font-family: var(--font-golos);
         text-align: center;
       }
-      div.details {
-        margin-top: 20px;
-        height: 400px;
-        width: 100%;
-        position: relative;
-        isolation: isolate;
-
-        img {
-          z-index: -10;
-          position: absolute;
-          height: 100%;
+      div.listing-item {
+        div.details {
+          margin-top: 20px;
+          height: 400px;
           width: 100%;
-          object-fit: cover;
-        }
+          position: relative;
+          isolation: isolate;
 
-        ul {
-          height: 20%;
-          width: 100%;
-          padding: 120px 40px 0px;
-          background: rgb(0, 0, 0);
-          background: linear-gradient(
-            0deg,
-            rgba(0, 0, 0, 1) 30%,
-            rgba(254, 255, 178, 0) 100%
-          );
-          z-index: 3;
-          align-self: flex-end;
-
-          h3,
-          li {
-            font-family: var(--font-golos);
-            color: #f0f7ee;
+          img {
+            z-index: -10;
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
           }
 
-          h3 {
-            font-size: 2rem;
+          ul {
+            height: 20%;
+            width: 100%;
+            padding: 120px 40px 0px;
+            background: rgb(0, 0, 0);
+            background: linear-gradient(
+              0deg,
+              rgba(0, 0, 0, 1) 0%,
+              rgba(255, 255, 255, 0.24693627450980393) 100%
+            );
+            z-index: 3;
+            align-self: flex-end;
+
+            h3,
+            li {
+              font-family: var(--font-golos);
+              color: #f0f7ee;
+            }
+
+            h3 {
+              font-size: 2rem;
+            }
           }
         }
       }
@@ -271,15 +273,6 @@ div.backtotopbutton {
       }
     }
   }
-
-  main {
-    section.featured {
-      div.details {
-        ul {
-        }
-      }
-    }
-  }
 }
 
 // Desktop
@@ -309,18 +302,6 @@ div.backtotopbutton {
       flex-direction: column;
       i {
         margin-bottom: 40px;
-      }
-    }
-  }
-
-  main {
-    section.featured {
-      div.details {
-        img {
-          object-position: center;
-        }
-        ul {
-        }
       }
     }
   }
