--- a/style.css
+++ b/style.css
@@ -57,10 +57,9 @@ body .container {
   margin: 0 auto;
 }
 body .glassbg {
-  background-color: rgba(109, 138, 150, 0.25);
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
-  filter: drop-shadow(2px 2px 2px black);
+  background-color: rgba(45, 49, 66, 0.75);
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
 }
 
 nav {
@@ -88,7 +87,7 @@ nav div.container div h2 {
 }
 
 header {
-  min-height: 60vh;
+  min-height: 75vh;
   width: 100%;
 }
 header h2 {
@@ -163,14 +162,14 @@ div.backtotopbutton i {
   font-family: var(--font-golos);
   text-align: center;
 }
-#bindex main section.featured div.listing-item div.details {
+#bindex main section.featured div.listing-item div.listing-title {
   margin-top: 20px;
   height: 400px;
   width: 100%;
   position: relative;
   isolation: isolate;
 }
-#bindex main section.featured div.listing-item div.details img {
+#bindex main section.featured div.listing-item div.listing-title img {
   z-index: -10;
   position: absolute;
   height: 100%;
@@ -178,22 +177,27 @@ div.backtotopbutton i {
   -o-object-fit: cover;
      object-fit: cover;
 }
-#bindex main section.featured div.listing-item div.details ul {
+#bindex main section.featured div.listing-item div.listing-title ul {
   height: 20%;
   width: 100%;
-  padding: 120px 40px 0px;
+  padding: 120px 40px 20px;
   background: rgb(0, 0, 0);
-  background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(255, 255, 255, 0.2469362745) 100%);
+  background: linear-gradient(0deg, rgb(0, 0, 0) 10%, rgba(255, 255, 255, 0) 100%);
   z-index: 3;
   align-self: flex-end;
 }
-#bindex main section.featured div.listing-item div.details ul h3,
-#bindex main section.featured div.listing-item div.details ul li {
+#bindex main section.featured div.listing-item div.listing-title ul h3,
+#bindex main section.featured div.listing-item div.listing-title ul li {
   font-family: var(--font-golos);
   color: #f0f7ee;
 }
-#bindex main section.featured div.listing-item div.details ul h3 {
+#bindex main section.featured div.listing-item div.listing-title ul h3 {
+  font-weight: 500;
   font-size: 2rem;
+}
+#bindex main section.featured div.listing-item div.listing-detail h3,
+#bindex main section.featured div.listing-item div.listing-detail li {
+  font-family: var(--font-golos);
 }
 
 @media screen and (max-width: 719px) {
@@ -212,6 +216,23 @@ div.backtotopbutton i {
   }
   section.strip div.container figure i {
     margin-right: 1.75rem;
+  }
+  main section.featured div.listing-item {
+    flex-direction: column;
+  }
+  main section.featured div.listing-item div.listing-title ul li {
+    margin: 4px 0px;
+    font-size: 1rem;
+  }
+  main section.featured div.listing-detail {
+    background-color: #f0f7ee;
+    padding: 20px;
+  }
+  main section.featured div.listing-detail h3 {
+    margin-bottom: 10px;
+  }
+  main section.featured div.listing-detail div ul {
+    width: 50%;
   }
 }
 @media screen and (min-width: 720px) {
@@ -235,5 +256,11 @@ div.backtotopbutton i {
   }
   section.strip figure i {
     margin-bottom: 40px;
+  }
+  main section.featured div.listing-item {
+    flex-direction: row;
+  }
+  main section.featured div.listing-item div.listing-detail {
+    margin-top: 20px;
   }
 }/*# sourceMappingURL=style.css.map */
