--- a/style.scss
+++ b/style.scss
@@ -75,9 +75,8 @@ body {
   }
 
   .glassbg {
-    background-color: rgba($color: #6d8a96, $alpha: 0.25);
-    backdrop-filter: blur(10px);
-    filter: drop-shadow(2px 2px 2px black);
+    background-color: rgba($color: #2d3142, $alpha: 0.75);
+    backdrop-filter: blur(20px);
   }
 }
 
@@ -111,7 +110,7 @@ nav {
 }
 
 header {
-  min-height: 60vh;
+  min-height: 75vh;
   width: 100%;
 
   h2 {
@@ -201,7 +200,7 @@ div.backtotopbutton {
         text-align: center;
       }
       div.listing-item {
-        div.details {
+        div.listing-title {
           margin-top: 20px;
           height: 400px;
           width: 100%;
@@ -219,12 +218,12 @@ div.backtotopbutton {
           ul {
             height: 20%;
             width: 100%;
-            padding: 120px 40px 0px;
+            padding: 120px 40px 20px;
             background: rgb(0, 0, 0);
             background: linear-gradient(
               0deg,
-              rgba(0, 0, 0, 1) 0%,
-              rgba(255, 255, 255, 0.24693627450980393) 100%
+              rgba(0, 0, 0, 1) 10%,
+              rgba(255, 255, 255, 0) 100%
             );
             z-index: 3;
             align-self: flex-end;
@@ -236,8 +235,16 @@ div.backtotopbutton {
             }
 
             h3 {
+              font-weight: 500;
               font-size: 2rem;
             }
+          }
+        }
+
+        div.listing-detail {
+          h3,
+          li {
+            font-family: var(--font-golos);
           }
         }
       }
@@ -273,6 +280,35 @@ div.backtotopbutton {
       }
     }
   }
+
+  main {
+    section.featured {
+      div.listing-item {
+        flex-direction: column;
+        div.listing-title {
+          ul {
+            li {
+              margin: 4px 0px;
+              font-size: 1rem;
+            }
+          }
+        }
+      }
+
+      div.listing-detail {
+        background-color: #f0f7ee;
+        padding: 20px;
+        h3 {
+          margin-bottom: 10px;
+        }
+        div {
+          ul {
+            width: 50%;
+          }
+        }
+      }
+    }
+  }
 }
 
 // Desktop
@@ -302,6 +338,17 @@ div.backtotopbutton {
       flex-direction: column;
       i {
         margin-bottom: 40px;
+      }
+    }
+  }
+
+  main {
+    section.featured {
+      div.listing-item {
+        flex-direction: row;
+        div.listing-detail {
+          margin-top: 20px;
+        }
       }
     }
   }
