--- a/style.scss
+++ b/style.scss
@@ -70,7 +70,7 @@ body {
   }
 
   .container {
-    width: 85%;
+    width: 80%;
     margin: 0 auto;
   }
 
@@ -109,8 +109,7 @@ nav {
   }
 }
 
-header {
-  min-height: 75vh;
+#bindex header {
   width: 100%;
 
   h2 {
@@ -201,9 +200,6 @@ div.backtotopbutton {
       }
       div.listing-item {
         div.listing-title {
-          margin-top: 20px;
-          height: 400px;
-          width: 100%;
           position: relative;
           isolation: isolate;
 
@@ -246,6 +242,19 @@ div.backtotopbutton {
           li {
             font-family: var(--font-golos);
           }
+          div {
+            ul {
+              li {
+                line-height: 1.5;
+                i {
+                  width: 40px;
+                }
+              }
+            }
+          }
+          p {
+            margin: 20px 0px;
+          }
         }
       }
     }
@@ -254,12 +263,8 @@ div.backtotopbutton {
 
 // Mobile
 @media screen and (max-width: 719px) {
-  #bhome header {
-    background-size: auto;
-  }
-
-  nav {
-    div.container {
+  div.container {
+    nav {
       ul.desktop {
         display: none;
       }
@@ -268,6 +273,11 @@ div.backtotopbutton {
         font-size: 1.75rem;
       }
     }
+  }
+
+  #bindex header {
+    min-height: 60vh;
+    background-size: auto;
   }
 
   section.strip {
@@ -286,6 +296,9 @@ div.backtotopbutton {
       div.listing-item {
         flex-direction: column;
         div.listing-title {
+          margin-top: 20px;
+          height: 400px;
+          width: 100%;
           ul {
             li {
               margin: 4px 0px;
@@ -297,7 +310,7 @@ div.backtotopbutton {
 
       div.listing-detail {
         background-color: #f0f7ee;
-        padding: 20px;
+        padding: 30px;
         h3 {
           margin-bottom: 10px;
         }
@@ -333,6 +346,14 @@ div.backtotopbutton {
     }
   }
 
+  #bindex header {
+    min-height: 80vh;
+    background-size: auto;
+    h2 {
+      margin-top: 60px;
+    }
+  }
+
   section.strip {
     figure {
       flex-direction: column;
@@ -346,8 +367,31 @@ div.backtotopbutton {
     section.featured {
       div.listing-item {
         flex-direction: row;
-        div.listing-detail {
+        div.listing-title {
           margin-top: 20px;
+          height: 400px;
+          width: 60%;
+          ul {
+            li {
+              margin: 4px 0px;
+              font-size: 1rem;
+            }
+          }
+        }
+      }
+
+      div.listing-detail {
+        background-color: #f0f7ee;
+        margin-top: 20px;
+        width: 40%;
+        padding: 40px;
+        h3 {
+          margin-bottom: 10px;
+        }
+        div {
+          ul {
+            width: 50%;
+          }
         }
       }
     }
