--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body .justify {
   justify-content: center;
 }
 body .container {
-  width: 85%;
+  width: 80%;
   margin: 0 auto;
 }
 body .glassbg {
@@ -86,31 +86,30 @@ nav div.container div h2 {
   letter-spacing: 0.15rem;
 }
 
-header {
-  min-height: 75vh;
+#bindex header {
   width: 100%;
 }
-header h2 {
+#bindex header h2 {
   color: var(--pri-col);
   font-style: italic;
   text-align: center;
   font-size: 2rem;
 }
-header h2 span {
+#bindex header h2 span {
   color: var(--hl-col);
   font-size: 3rem;
   line-height: 1;
 }
-header div {
+#bindex header div {
   margin: 40px 0px;
 }
-header div hr {
+#bindex header div hr {
   width: 140px;
   margin: 0px 10px;
   height: 1px;
   background-color: var(--hl-col);
 }
-header div i {
+#bindex header div i {
   margin: 0px 5px;
   color: var(--hl-col);
 }
@@ -163,9 +162,6 @@ div.backtotopbutton i {
   text-align: center;
 }
 #bindex main section.featured div.listing-item div.listing-title {
-  margin-top: 20px;
-  height: 400px;
-  width: 100%;
   position: relative;
   isolation: isolate;
 }
@@ -199,17 +195,27 @@ div.backtotopbutton i {
 #bindex main section.featured div.listing-item div.listing-detail li {
   font-family: var(--font-golos);
 }
+#bindex main section.featured div.listing-item div.listing-detail div ul li {
+  line-height: 1.5;
+}
+#bindex main section.featured div.listing-item div.listing-detail div ul li i {
+  width: 40px;
+}
+#bindex main section.featured div.listing-item div.listing-detail p {
+  margin: 20px 0px;
+}
 
 @media screen and (max-width: 719px) {
-  #bhome header {
-    background-size: auto;
-  }
-  nav div.container ul.desktop {
+  div.container nav ul.desktop {
     display: none;
   }
-  nav div.container i {
+  div.container nav i {
     color: var(--hl-col);
     font-size: 1.75rem;
+  }
+  #bindex header {
+    min-height: 60vh;
+    background-size: auto;
   }
   section.strip div.container {
     flex-direction: column;
@@ -220,13 +226,18 @@ div.backtotopbutton i {
   main section.featured div.listing-item {
     flex-direction: column;
   }
+  main section.featured div.listing-item div.listing-title {
+    margin-top: 20px;
+    height: 400px;
+    width: 100%;
+  }
   main section.featured div.listing-item div.listing-title ul li {
     margin: 4px 0px;
     font-size: 1rem;
   }
   main section.featured div.listing-detail {
     background-color: #f0f7ee;
-    padding: 20px;
+    padding: 30px;
   }
   main section.featured div.listing-detail h3 {
     margin-bottom: 10px;
@@ -251,6 +262,13 @@ div.backtotopbutton i {
   nav div.container i {
     display: none;
   }
+  #bindex header {
+    min-height: 80vh;
+    background-size: auto;
+  }
+  #bindex header h2 {
+    margin-top: 60px;
+  }
   section.strip figure {
     flex-direction: column;
   }
@@ -260,7 +278,25 @@ div.backtotopbutton i {
   main section.featured div.listing-item {
     flex-direction: row;
   }
-  main section.featured div.listing-item div.listing-detail {
+  main section.featured div.listing-item div.listing-title {
     margin-top: 20px;
+    height: 400px;
+    width: 60%;
+  }
+  main section.featured div.listing-item div.listing-title ul li {
+    margin: 4px 0px;
+    font-size: 1rem;
+  }
+  main section.featured div.listing-detail {
+    background-color: #f0f7ee;
+    margin-top: 20px;
+    width: 40%;
+    padding: 40px;
+  }
+  main section.featured div.listing-detail h3 {
+    margin-bottom: 10px;
+  }
+  main section.featured div.listing-detail div ul {
+    width: 50%;
   }
 }/*# sourceMappingURL=style.css.map */
