--- a/style.css
+++ b/style.css
@@ -62,6 +62,21 @@ body .glassbg {
   -webkit-backdrop-filter: blur(20px);
           backdrop-filter: blur(20px);
 }
+body button.button {
+  padding: 0.35rem 0.5rem;
+  justify-self: flex-end;
+  align-self: flex-end;
+  text-transform: uppercase;
+  font-family: var(--font-montserrat);
+  color: #fecb54;
+  font-weight: 500;
+  background-color: #003554;
+  border-color: transparent;
+  cursor: pointer;
+}
+body button:hover {
+  filter: drop-shadow(2px 2px 0px var(--hl-col));
+}
 
 nav {
   padding: 1rem;
@@ -192,6 +207,10 @@ div.backtotopbutton i {
   font-weight: 500;
   font-size: 2rem;
 }
+#bindex main section.featured div.listing-item div.listing-title ul li {
+  opacity: 0.5;
+  font-size: 0.85rem;
+}
 #bindex main section.featured div.listing-item div.listing-detail h3,
 #bindex main section.featured div.listing-item div.listing-detail li {
   font-family: var(--font-golos);
@@ -204,21 +223,6 @@ div.backtotopbutton i {
 }
 #bindex main section.featured div.listing-item div.listing-detail p {
   margin: 20px 0px;
-}
-#bindex main section.featured div.listing-item div.listing-detail button.button {
-  padding: 0.35rem 0.5rem;
-  justify-self: flex-end;
-  align-self: flex-end;
-  text-transform: uppercase;
-  font-family: var(--font-montserrat);
-  color: #fecb54;
-  font-weight: 500;
-  background-color: #003554;
-  border-color: transparent;
-  cursor: pointer;
-}
-#bindex main section.featured div.listing-item div.listing-detail button:hover {
-  filter: drop-shadow(2px 2px 0px var(--hl-col));
 }
 
 @media screen and (max-width: 719px) {
@@ -251,15 +255,51 @@ div.backtotopbutton i {
     margin: 4px 0px;
     font-size: 1rem;
   }
-  main section.featured div.listing-detail {
+  main section.featured div.listing-item div.listing-detail {
     background-color: #f0f7ee;
     padding: 30px;
   }
-  main section.featured div.listing-detail h3 {
+  main section.featured div.listing-item div.listing-detail h3 {
     margin-bottom: 10px;
   }
-  main section.featured div.listing-detail div ul {
+  main section.featured div.listing-item div.listing-detail div ul {
     width: 50%;
+  }
+  main section.featured div.listing-card {
+    margin: 20px 0px;
+    width: 100%;
+    flex-direction: column;
+  }
+  main section.featured div.listing-card figure {
+    margin: 20px 0px;
+    min-height: 20px;
+    background-color: #f0f7ee;
+  }
+  main section.featured div.listing-card figure img {
+    width: 50%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  main section.featured div.listing-card figure figcaption {
+    width: 50%;
+    padding: 30px;
+    font-family: var(--font-golos);
+    line-height: 1.5;
+  }
+  main section.featured div.listing-card figure figcaption li.sublist-item {
+    font-size: 0.75rem;
+    opacity: 0.85;
+  }
+  main section.featured div.listing-card figure figcaption div {
+    justify-content: space-between;
+    margin: 20px 0px;
+  }
+  main section.featured div.listing-card figure figcaption div ul li i {
+    width: 30px;
+  }
+  main section.featured div.listing-card figure figcaption button.button {
+    align-self: flex-end;
+    justify-self: flex-end;
   }
 }
 @media screen and (min-width: 720px) {
@@ -296,23 +336,22 @@ div.backtotopbutton i {
   }
   main section.featured div.listing-item div.listing-title {
     margin-top: 20px;
-    height: 400px;
     width: 60%;
   }
   main section.featured div.listing-item div.listing-title ul li {
     margin: 4px 0px;
     font-size: 1rem;
   }
-  main section.featured div.listing-detail {
+  main section.featured div.listing-item div.listing-detail {
     background-color: #f0f7ee;
     margin-top: 20px;
     width: 40%;
     padding: 40px;
   }
-  main section.featured div.listing-detail h3 {
+  main section.featured div.listing-item div.listing-detail h3 {
     margin-bottom: 10px;
   }
-  main section.featured div.listing-detail div ul {
+  main section.featured div.listing-item div.listing-detail div ul {
     width: 50%;
   }
 }/*# sourceMappingURL=style.css.map */
